# SQLite-MCP-and-Query-Agents

./: .gitignore  README.md  config.py  mcp_server_fast.py  pyproject.toml  requirements.txt  shanghaichengdi.md  sqlite_operations.py  test_garbage_monitoring.py
agents/: README.md  garbage_monitoring_agent.py  requirements.txt
outputs/: conversation_20250710_161643.json  query_result_20250710_161643.txt  tool_result_1_complete_20250710_161643.json  tool_result_1_清运统计_20250710_161643.csv  tool_result_1_清运趋势_20250710_161643.csv
