[project]
name = "shanghaichengdi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-mcp-adapters>=0.1.8",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "mcp[cli]>=1.10.1",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "langgraph-cli[inmem]>=0.3.4",
    "debugpy>=1.8.14",
]
